--- a/Authentication/TOTPUIKitExample/TOTP-demo-app-samples-iOS/TOTP-demo-app-samples-iOS/UI/TableViews/TOTPCodes/TOTPCodeTableViewCell.xib
+++ b/Authentication/TOTPUIKitExample/TOTP-demo-app-samples-iOS/TOTP-demo-app-samples-iOS/UI/TableViews/TOTPCodes/TOTPCodeTableViewCell.xib
@@ -33,8 +33,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123 456" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="018-Tu-Lgx" userLabel="code">
-                                <rect key="frame" x="4" y="21.666666666666668" width="104" height="33.666666666666657"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="018-Tu-Lgx" userLabel="code">
+                                <rect key="frame" x="4" y="38.666666666666664" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" systemColor="systemCyanColor"/>
                                 <nil key="highlightedColor"/>
@@ -46,14 +46,14 @@
                                     <constraint firstAttribute="height" constant="1" id="H1I-CK-3L3"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9UM-0N-fhH" userLabel="counter">
-                                <rect key="frame" x="448.66666666666669" y="30" width="17.333333333333314" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9UM-0N-fhH" userLabel="counter">
+                                <rect key="frame" x="466" y="38.666666666666664" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="systemCyanColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TGq-6Y-51o">
-                                <rect key="frame" x="328.66666666666669" y="26" width="95" height="25"/>
+                                <rect key="frame" x="345" y="26" width="95" height="25"/>
                                 <color key="backgroundColor" systemColor="systemGray4Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="2Oq-mZ-QF7"/>
@@ -68,7 +68,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Biometric protected" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uV9-oI-2Kp">
-                                <rect key="frame" x="320" y="55" width="112.66666666666669" height="14.333333333333329"/>
+                                <rect key="frame" x="336.33333333333331" y="55" width="112.66666666666669" height="14.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -89,7 +89,7 @@
                             <constraint firstItem="018-Tu-Lgx" firstAttribute="centerY" secondItem="BZF-MM-bDS" secondAttribute="centerY" id="hi7-q0-HdY"/>
                             <constraint firstItem="Wvu-sX-Yvj" firstAttribute="leading" secondItem="BZF-MM-bDS" secondAttribute="leading" constant="4" id="iVU-Wc-UQa"/>
                             <constraint firstAttribute="bottom" secondItem="mhW-bw-k6E" secondAttribute="bottom" constant="2" id="kyp-lT-JPI"/>
-                            <constraint firstItem="9UM-0N-fhH" firstAttribute="leading" secondItem="TGq-6Y-51o" secondAttribute="trailing" constant="25" id="uYn-2R-HzF"/>
+                            <constraint firstAttribute="trailing" secondItem="TGq-6Y-51o" secondAttribute="trailing" constant="30" id="uOb-b6-dIg"/>
                             <constraint firstItem="TGq-6Y-51o" firstAttribute="centerY" secondItem="BZF-MM-bDS" secondAttribute="centerY" id="yWY-sj-4nU"/>
                         </constraints>
                     </view>
