--- a/Authentication/TOTPUIKitExample/TOTP-demo-app-samples-iOS/TOTP-demo-app-samples-iOS/UI/TableViews/TOTPCodes/TOTPCodeTableViewCell.xib
+++ b/Authentication/TOTPUIKitExample/TOTP-demo-app-samples-iOS/TOTP-demo-app-samples-iOS/UI/TableViews/TOTPCodes/TOTPCodeTableViewCell.xib
@@ -28,8 +28,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="jobs@example" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bNM-p1-t8Q" userLabel="label">
-                                <rect key="frame" x="61.999999999999993" y="4" width="117.33333333333331" height="21.666666666666668"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <rect key="frame" x="62" y="7.6666666666666652" width="82" height="14.333333333333336"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -77,9 +77,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="bNM-p1-t8Q" firstAttribute="leading" secondItem="Wvu-sX-Yvj" secondAttribute="trailing" constant="4" id="1kt-lF-vTN"/>
-                            <constraint firstItem="bNM-p1-t8Q" firstAttribute="top" secondItem="BZF-MM-bDS" secondAttribute="top" constant="4" id="2Ay-2V-oGh"/>
                             <constraint firstItem="mhW-bw-k6E" firstAttribute="leading" secondItem="BZF-MM-bDS" secondAttribute="leading" constant="4" id="3E2-2M-PIh"/>
                             <constraint firstAttribute="trailing" secondItem="mhW-bw-k6E" secondAttribute="trailing" constant="4" id="4XE-GX-fPu"/>
+                            <constraint firstItem="bNM-p1-t8Q" firstAttribute="centerY" secondItem="Wvu-sX-Yvj" secondAttribute="centerY" id="4wL-Zt-9It"/>
                             <constraint firstItem="uV9-oI-2Kp" firstAttribute="centerX" secondItem="TGq-6Y-51o" secondAttribute="centerX" id="6eu-Fa-p1c"/>
                             <constraint firstItem="018-Tu-Lgx" firstAttribute="leading" secondItem="BZF-MM-bDS" secondAttribute="leading" constant="4" id="9Gb-3D-e45"/>
                             <constraint firstItem="Wvu-sX-Yvj" firstAttribute="top" secondItem="BZF-MM-bDS" secondAttribute="top" constant="4" id="9I2-GY-EJq"/>
@@ -117,10 +117,10 @@
     </objects>
     <resources>
         <systemColor name="systemCyanColor">
-            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
