--- a/IdentityOrchestration/IDO-ExampleApp/IDO-ExampleApp/ViewControllers/DisplayInformationViewController/DisplayInformationViewController.xib
+++ b/IdentityOrchestration/IDO-ExampleApp/IDO-ExampleApp/ViewControllers/DisplayInformationViewController/DisplayInformationViewController.xib
@@ -30,13 +30,19 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGT-O5-rjT">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="OGT-O5-rjT">
                             <rect key="frame" x="0.0" y="50" width="353" height="20.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="OGT-O5-rjT" secondAttribute="bottom" id="GSe-ma-E1M"/>
+                        <constraint firstItem="OGT-O5-rjT" firstAttribute="leading" secondItem="IwH-Bb-uWO" secondAttribute="leading" id="l7z-3f-kYw"/>
+                        <constraint firstAttribute="trailing" secondItem="OGT-O5-rjT" secondAttribute="trailing" id="qEM-2L-7uk"/>
+                        <constraint firstItem="OGT-O5-rjT" firstAttribute="top" secondItem="IwH-Bb-uWO" secondAttribute="top" constant="50" id="tM0-gr-auk"/>
+                    </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j20-2A-x5X">
                     <rect key="frame" x="71.666666666666686" y="763" width="250" height="35"/>
@@ -58,6 +64,7 @@
             <viewLayoutGuide key="safeArea" id="uzE-Ia-uQg"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="j20-2A-x5X" firstAttribute="top" relation="greaterThanOrEqual" secondItem="IwH-Bb-uWO" secondAttribute="bottom" constant="8" id="2Gz-U9-1rA"/>
                 <constraint firstItem="IwH-Bb-uWO" firstAttribute="centerX" secondItem="DkG-Nm-0Uq" secondAttribute="centerX" id="4zU-ra-wQo"/>
                 <constraint firstItem="j20-2A-x5X" firstAttribute="centerX" secondItem="DkG-Nm-0Uq" secondAttribute="centerX" id="5gk-HX-bc6"/>
                 <constraint firstItem="IwH-Bb-uWO" firstAttribute="leading" secondItem="uzE-Ia-uQg" secondAttribute="leading" constant="20" id="Ow9-Y7-Nmq"/>
