--- a/IdentityOrchestration/IDO-ExampleApp/IDO-ExampleApp/ViewControllers/SmsOTPAuthenticationViewController/SMSOTPAuthenticationViewController.xib
+++ b/IdentityOrchestration/IDO-ExampleApp/IDO-ExampleApp/ViewControllers/SmsOTPAuthenticationViewController/SMSOTPAuthenticationViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SMSOTPAuthenticationViewController" customModule="IDO_ExampleApp">
             <connections>
+                <outlet property="otpInput" destination="Bbb-UK-IOQ" id="XrI-jS-HZC"/>
                 <outlet property="submitButton" destination="lfr-VV-5zA" id="UvD-Xv-vMP"/>
                 <outlet property="textLabel" destination="nHs-qa-xeT" id="S52-OM-tQ6"/>
                 <outlet property="titleLabel" destination="S9F-hl-V5N" id="ad0-zw-3am"/>
@@ -54,6 +55,11 @@
                         <action selector="onSubmitButton:" destination="-1" eventType="touchUpInside" id="cCD-Gs-R4R"/>
                     </connections>
                 </button>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="OTP code" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Bbb-UK-IOQ">
+                    <rect key="frame" x="20" y="209.33333333333334" width="353" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -61,6 +67,9 @@
                 <constraint firstItem="1tj-Mb-nCY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="Lfg-9b-s6R"/>
                 <constraint firstItem="lfr-VV-5zA" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="MYD-Qa-LE0"/>
                 <constraint firstItem="1tj-Mb-nCY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="WoP-9i-4L6"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Bbb-UK-IOQ" secondAttribute="trailing" constant="20" id="XVv-PX-nZw"/>
+                <constraint firstItem="Bbb-UK-IOQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="h3z-dC-5hn"/>
+                <constraint firstItem="Bbb-UK-IOQ" firstAttribute="top" secondItem="1tj-Mb-nCY" secondAttribute="bottom" constant="50" id="mB7-1b-eq8"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1tj-Mb-nCY" secondAttribute="trailing" constant="20" id="poL-jQ-dvd"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="lfr-VV-5zA" secondAttribute="bottom" constant="20" id="zLH-1O-s2v"/>
             </constraints>
