--- a/IdentityOrchestration/IDO-ExampleApp/IDO-ExampleApp/ViewControllers/SmsOTPAuthenticationViewController/SMSOTPAuthenticationViewController.xib
+++ b/IdentityOrchestration/IDO-ExampleApp/IDO-ExampleApp/ViewControllers/SmsOTPAuthenticationViewController/SMSOTPAuthenticationViewController.xib
@@ -59,6 +59,9 @@
                     <rect key="frame" x="20" y="209.33333333333334" width="353" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="21C-Yg-4Nk"/>
+                    </connections>
                 </textField>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
